Closed Bug 640274 Opened 14 years ago Closed 14 years ago

rm {JS_,js_,}GetExternalStringGCType

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: luke, Assigned: luke)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch rmSplinter Review
This doesn't seem to be used anywhere in Mozilla. If it was used anywhere, I think it would immediately assert because GetExternalStringGCType does JS_ASSERT(IsFinalizableStringKind(str->externalStringType)) which seems bogus. Affects JSAPI, so r? brendan.
Attachment #518140 - Flags: review?(brendan)
Comment on attachment 518140 [details] [diff] [review] rm This probably worked once upon a time. It was added for completeness, but it seems like none of the embedding's business! /be
Attachment #518140 - Flags: review?(brendan) → review+
Whiteboard: fixed-in-tracemonkey
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: