Bug 640274 - rm {JS_,js_,}GetExternalStringGCType (r=brendan)